--- a/Balanceador1/Traefik/docker-compose.yml
+++ b/Balanceador1/Traefik/docker-compose.yml
@@ -1,18 +1,76 @@
 # DOCKER-COMPOSE - BALANCEADOR 1
-
 version: '3'
 
 services:
+  # -------------------------
+  # Traefik
+  # -------------------------
   traefik:
-    image: traefik:2.11                  # Imagen oficial de Traefik fija para evitar actualizaciones
-    container_name: traefik                # Nombre del contenedor
+    image: traefik:2.11                  # Imagen de Traefik
+    container_name: traefik              # Nombre del contenedor
     ports:
-      - "80:80"                            # Expone el puerto 80 para HTTP
-      - "443:443"                          # Expone el puerto 443 para HTTPS
-      - "8080:8080"                        # Expone el puerto 8080 para control de Traefik
+      - "80:80"                          # Puerto HTTP
+      - "443:443"                        # Puerto HTTPS
+      - "8080:8080"                      # Panel de control de Traefik
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock   # Permite a Traefik detectar otros contenedores
-      - ./traefik.yml:/etc/traefik/traefik.yml:ro   # Configuración estática de Traefik
+      - ./traefik.yml:/etc/traefik/traefik.yml:ro   # Configuración estática
       - ./dynamic.yml:/etc/traefik/dynamic.yml:ro   # Configuración dinámica
-      - ./certs:/etc/traefik/certs:ro               # Carpeta con certificados TLS
-    restart: unless-stopped                # Reinicia el contenedor automáticamente
+      - ./certs:/etc/traefik/certs:ro               # Certificados TLS
+    restart: unless-stopped              # Reinicia automáticamente si se cae
+    networks:
+      - monitoring                       # Red compartida con Prometheus/Grafana
+
+  # -------------------------
+  # Prometheus: recolector de métricas
+  # -------------------------
+  prometheus:
+    image: prom/prometheus:latest        # Imagen de Prometheus
+    container_name: prometheus
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro  # Config principal
+      - prometheus_data:/prometheus      # Volumen para guardar históricos de métricas
+    ports:
+      - "9090:9090"                      # Interfaz web de Prometheus
+    restart: unless-stopped
+    networks:
+      - monitoring
+
+  # -------------------------
+  # Grafana: visualización de métricas
+  # -------------------------
+  grafana:
+    image: grafana/grafana-oss:latest    # Imagen oficial de Grafana OSS
+    container_name: grafana
+    ports:
+      - "3000:3000"                      # Interfaz web de Grafana
+    volumes:
+      - ./grafana:/var/lib/grafana       # Volumen para guardar dashboards y configuración
+    restart: unless-stopped
+    networks:
+      - monitoring
+
+  # -------------------------
+  # Node Exporter: métricas de la VM
+  # -------------------------
+  node-exporter:
+    image: prom/node-exporter:latest     # Imagen de Node Exporter
+    container_name: node-exporter
+    ports:
+      - "9100:9100"                      # Puerto de métricas
+    pid: "host"                          # Permite acceder a métricas del host
+    restart: unless-stopped
+    networks:
+      - monitoring
+
+# -------------------------
+# Volúmenes persistentes
+# -------------------------
+volumes:
+  prometheus_data:                       # Volumen para datos de Prometheus
+
+# -------------------------
+# Red compartida
+# -------------------------
+networks:
+  monitoring:                            # Red interna para que los servicios se vean entre sí
