--- a/Balanceador1/Keepalived/keepalived.conf
+++ b/Balanceador1/Keepalived/keepalived.conf
@@ -2,7 +2,7 @@
 
 
 global_defs {
-    script_user root                 # Evitar que se ejecuten scripts maliciosos
+    script_user root                 # Evita que se ejecuten scripts maliciosos
     enable_script_security         
 }
 
