--- a/Balanceador1/Traefik/dynamic.yml
+++ b/Balanceador1/Traefik/dynamic.yml
@@ -1,50 +1,50 @@
 # TRAEFIK DYNAMIC CONFIG - BALANCEADOR 1
 
 
-tls:                                            # Certificado TLS
+tls:
   certificates:
-    - certFile: /etc/traefik/certs/server.crt
-      keyFile: /etc/traefik/certs/server.key
+    - certFile: /etc/traefik/certs/sigpol.crt   # Certificado público TLS para HTTPS
+      keyFile: /etc/traefik/certs/sigpol.key    # Clave privada asociada al certificado
 
 http:
   routers:
     redirect-to-https:
-      entryPoints:                             # Redirección a https
+      entryPoints:
         - "web"                                
-      rule: "Host(`192.168.1.100`)"            # Regla: solo aplica si el host es la VIP
+      rule: "Host(`sigpol`)"                    # Aplica solo si el host es 'sigpol'
       middlewares:
-        - redirect-to-https 
-      service: noop@internal
+        - redirect-to-https                     # Fuerza redirección a HTTPS
+      service: noop@internal                    # Servicio interno vacío, usado solo para redirecciones
 
     websecure:
       entryPoints:
-        - "websecure"                          # Entrada HTTPS (puerto 443)
-      rule: "Host(`192.168.1.100`)"            # Regla: solo aplica si el host es la VIP
-      service: web-servers                     # Servicio backend
-      tls: {}                                  # Activa TLS
+        - "websecure"                           # Escucha en el entrypoint websecure (puerto 443)
+      rule: "Host(`sigpol`)"                    # Aplica solo si el host es 'sigpol'
+      service: web-servers                      # Balanceador de webservers
+      tls: {}                                   # Activa TLS usando el certificado
       middlewares:
-        - add-balancer-headers                 # Middleware que añade cabecera X-Balancer
+        - add-balancer-headers                  # Middleware que añade cabeceras personalizadas
 
   middlewares:
     redirect-to-https:
       redirectScheme:
-        scheme: https                          # Fuerza redirección a HTTPS
-        permanent: true                        # Redirección permanente
+        scheme: https                           # Redirige tráfico HTTP a HTTPS
+        permanent: true                         # Redirección permanente (301)
 
     add-balancer-headers:
       headers:
         customRequestHeaders:
-          X-Balancer: "Traefik1"               # Cabecera para identificar el balanceador
+          X-Balancer: "Traefik1"                # Añade cabecera personalizada para identificar el balanceador
 
   services:
     web-servers:
       loadBalancer:
-        servers:                               # Lista de servidores backend
-          - url: "http://192.168.1.30:8080"    # Web1
-          - url: "http://192.168.1.30:8081"    # Web2
-          - url: "http://192.168.1.31:8082"    # Web3
-          - url: "http://192.168.1.31:8083"    # Web4
+        servers:
+          - url: "http://192.168.1.30:8080"     # web1
+          - url: "http://192.168.1.30:8081"     # web2
+          - url: "http://192.168.1.31:8082"     # web3
+          - url: "http://192.168.1.31:8083"     # web4
         healthCheck:
-          path: /login.php                     # Ruta usada para comprobar salud de los backends
-          interval: "10s"                      # Cada 10 segundos
-          timeout: "3s"                        # Tiempo máximo de espera por respuesta
+          path: /login.php                      # Endpoint usado para comprobar salud de los servidores
+          interval: "10s"                       # Intervalo de chequeo cada 10 segundos
+          timeout: "3s"                         # Tiempo máximo de espera para cada chequeo
